11-unifi/web-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-web
  namespace: unifi
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/name: unifi-os-server
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi
  namespace: unifi
spec:
  parentRefs:
    - name: main-gateway
      namespace: default
      sectionName: websecure
  hostnames:
    - unifi.k8s.noelmiller.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: unifi-web
          port: 80
